Resolves: tdf#135108 Allow link updates if loaded document so far had none

It is the current user who'll add external references, not the
creator of the loaded document.

Change-Id: I59a6d0b8600a9b299aa54a1efeedfccc16ad69d7