sc/source/ui/inc/docsh.hxx
@@ -294,6 +294,7 @@ public:
 
     virtual void    ReconnectDdeLink(SfxObjectShell& rServer) override;
     void            UpdateLinks() override;
+    void            AllowLinkUpdate();
     void            ReloadAllLinks();
     void            ReloadTabLinks();
     ScLkUpdMode     GetLinkUpdateModeState() const;
